# face_track_visp

./: CMakeLists.txt  LICENSE  package.xml
src/: CMakeLists.txt  bodyDetection.cpp  bodyDetection.hpp  vispDetection.cpp
src/particle_filter/: CMakeLists.txt  detect  detectionTracking.cpp  detectionTracking.hpp  filter.cpp  filter.h  main.cpp  mainPF.cpp  mainPF.hpp  particleFilter.cpp
src/test/: bodyDetection.cpp  detect_face_rgb.cpp
